Fixed sizing to not stretch and always fit window.

--- a/js/components/Background/Background.css
+++ b/js/components/Background/Background.css
@@ -4,7 +4,10 @@
 }
 
 img {
-	height: 80vh;
+	max-width: 80vw;
+	max-height: 80vh;
+	height: auto;
+	width: auto;
 }
 
 .image-credits {
